hphp/hack/test/typecheck/is_expression/keyset.php.exp
File "keyset.php", line 6, characters 20-21:
Invalid argument (Typing[4110])
  File "keyset.php", line 25, characters 32-37:
  This is a string
  File "hackarray.hhi", line 12, characters 35-42:
  It is incompatible with an array key (int/string)
File "keyset.php", line 4, characters 13-18:
The type keyset expects 1 type parameter(s) (Typing[4101])
File "keyset.php", line 13, characters 20-21:
Invalid argument (Typing[4110])
  File "keyset.php", line 25, characters 32-37:
  This is a string
  File "hackarray.hhi", line 12, characters 35-42:
  It is incompatible with an array key (int/string)
